# SIGN-XAI

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt  setup.py  utils.py
examples/: vgg16.py
methods/: wrappers.py
methods/innvestigate/: LICENSE
signxai/examples/: mnist.py  vgg16.py
signxai/methods/innvestigate/utils/keras/: checks.py
signxai/utils/: utils.py
